Рефакторинг: замена класса Buffer на TimeSeriesBuffer в классах Candle1D, Candle1H, Candle1m и Candle4H; обновление методов для работы с новым буфером; добавление нового класса Pipeline для обработки метрик RSI через стадии; улучшение структуры кода в RsiAbstractIndicator и PumpAndDumpMetric.