@@ -1,154 +1,111 @@
 package artskif.trader.indicator.rsi;
 
-import artskif.trader.buffer.Buffer;
+import artskif.trader.buffer.TimeSeriesBuffer;
 import artskif.trader.candle.AbstractCandle;
-import artskif.trader.candle.Candle1m;
-import artskif.trader.candle.CandleTimeframe;
-import artskif.trader.common.AbstractTimeSeries;
+import artskif.trader.common.Stage;
 import artskif.trader.dto.CandlestickDto;
 import artskif.trader.events.CandleEvent;
 import artskif.trader.events.CandleEventBus;
 import artskif.trader.indicator.AbstractIndicator;
-import artskif.trader.indicator.rsi.metrics.AbstractMetrics;
 import artskif.trader.repository.BufferRepository;
 import jakarta.enterprise.inject.Instance;
-import jakarta.inject.Inject;
 
-import java.math.BigDecimal;
 import java.time.Instant;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public abstract class RsiAbstractIndicator extends AbstractIndicator<RsiPoint> {
 
-    protected final Buffer<RsiPoint> buffer; // Буфер для хранения точек индикатора
+    protected final TimeSeriesBuffer<RsiPoint> rsiTimeSeriesBuffer; // Буфер для хранения точек индикатора
 
     protected RsiState rsiState; // состояние RSI
-    protected Long candleBufferVersion; // Версия буфера свечей, для отслеживания изменений
+    protected RsiPoint lastPoint; // состояние RSI
     protected Integer period; // Период индикатора
     protected BufferRepository<RsiPoint> rsiBufferRepository;
     protected AbstractCandle candle;
-    protected BigDecimal currentValue;
-    protected BigDecimal confirmedValue;
     protected Instant bucket;
-    protected Instant processingTime;
-    protected Instance<AbstractMetrics> metrics;
+    protected Instant lastProcessingTime;
+    protected List<Stage<RsiPipelineContext>> metrics;
 
-    public RsiAbstractIndicator(AbstractCandle candle, CandleEventBus bus, Instance<AbstractMetrics> metrics, Integer period, BufferRepository<RsiPoint> rsiBufferRepository,
+    public RsiAbstractIndicator(AbstractCandle candle, CandleEventBus bus, Instance<Stage<RsiPipelineContext>> metrics, Integer period, BufferRepository<RsiPoint> rsiBufferRepository,
                                 int bufferSize) {
         super(bus);
         this.period = period;
         this.rsiBufferRepository = rsiBufferRepository; // Размер буфера для хранения точек индик
-        this.buffer = new Buffer<>(bufferSize);
+        this.rsiTimeSeriesBuffer = new TimeSeriesBuffer<>(bufferSize, getCandleTimeframe().getDuration());
         this.candle = candle;
-        this.candleBufferVersion = 0L;
         this.rsiState = RsiState.empty(period, getCandleTimeframe());
-        this.metrics = metrics;
+        this.metrics = metrics != null ? metrics.stream()
+                .sorted(Comparator.comparingInt(Stage::order))
+                .toList() : List.of();
     }
 
     @Override
     protected void handleEvent(CandleEvent ev) {
-        CandlestickDto c = ev.candle();
         Instant bucket = ev.bucket();
 
         this.bucket = bucket;
-        this.processingTime = Instant.now();
+        this.lastProcessingTime = Instant.now();
 
-        Buffer<CandlestickDto> candleBuffer = candle.getBuffer();
+        TimeSeriesBuffer<CandlestickDto> candleBuffer = candle.getBuffer();
         // Если версия буфера свечей изменилась — пересчитываем индикатор из буфера
-        if (candleBufferVersion != candleBuffer.getVersion() && !candleBuffer.isEmpty()) {
+        if (rsiTimeSeriesBuffer.getLastBucket() == null || (candleBuffer.getLastBucket() != null && rsiTimeSeriesBuffer.getLastBucket().isBefore(candleBuffer.getLastBucket()))) {
             log().infof("📥 [%s] версия буфера свечей изменилась — пересчитываем индикатор из буфера", getName());
-            recalculateIndicator(candleBuffer.getSnapshot());
-            recalculateMetrics();
-            candleBufferVersion = candleBuffer.getVersion();
+            recalculateIndicator(candleBuffer);
         }
 
-        if (isObsoleteCandle(bucket)) return;
-
-        if (Boolean.TRUE.equals(c.getConfirmed())) {
-            handleConfirmedCandle(c, bucket);
-        } else {
-            handleTickCandle(c, bucket);
-        }
     }
 
-    protected void handleTickCandle(CandlestickDto c, Instant bucket) {
-
-        RsiCalculator.preview(rsiState, c.getClose())
-                .ifPresent(rsi -> {
-                            currentValue = rsi;
-                        }
-                );
-    }
-
-    protected void handleConfirmedCandle(CandlestickDto c, Instant bucket) {
-
-        RsiCalculator.RsiUpdate upd = RsiCalculator.updateConfirmed(rsiState, bucket, c.getClose());
-        this.rsiState = upd.state;
-
-        log().debugf("📥 [%s] Получено новое значение  RSI - %s", getName(), upd.point);
-        log().debugf("📥 [%s] Получено новое значение  State RSI - %s", getName(), upd.state);
-
-        upd.point.ifPresent(p -> {
-            currentValue = p.rsi();
-            confirmedValue = p.rsi();
-            buffer.putItem(bucket, p);
-        });
-
-        // сохраняем индикаторный ряд
-        initSaveBuffer();
-    }
-
-    protected void handleMetric(CandleEvent ev){
-
-    }
-
-    private boolean isObsoleteCandle(Instant bucket) {
-        // Пропускаем, если bucket меньше или равен timestamp rsiState
-        if (rsiState.getTimestamp() != null && bucket.compareTo(rsiState.getTimestamp()) <= 0) {
-            log().debugf("📥 [%s] пропускаем свечи которые раньше текущего состояния. State - %s, bucket - %s",
-                    getName(), rsiState.getTimestamp(), bucket);
-            return true;
-        }
-        return false;
-    }
-
-    private void recalculateIndicator(Map<Instant, CandlestickDto> snap) {
-        if (snap != null && !snap.isEmpty()) {
-            // Обнуляем текущее состояние buffer и rsiState
-            buffer.clear();
-            rsiState = RsiState.empty(period, getCandleTimeframe());
+    private void recalculateIndicator(TimeSeriesBuffer<CandlestickDto> seriesBuffer) {
+        if (seriesBuffer != null && !seriesBuffer.isEmpty()) {
 
             // Фильтруем только подтверждённые свечи и сортируем по времени
-            List<Map.Entry<Instant, CandlestickDto>> confirmedAsc = snap.entrySet().stream()
+            List<Map.Entry<Instant, CandlestickDto>> confirmedCandles = seriesBuffer.getItemsAfter(rsiTimeSeriesBuffer.getLastBucket())
+                    .entrySet().stream()
                     .filter(e -> Boolean.TRUE.equals(e.getValue().getConfirmed()))
                     .sorted(Map.Entry.comparingByKey())
-                    .collect(Collectors.toList());
+                    .toList();
 
-            if (!confirmedAsc.isEmpty()) {
+            if (!confirmedCandles.isEmpty()) {
                 // Выполняем полный пересчет всех значений RSI
-                RsiCalculator.FullRecalculationResult result =
-                        RsiCalculator.recalculateFromSnapshot(rsiState, confirmedAsc);
+                int processedPoints = 0;
 
-                // Обновляем состояние
-                rsiState = result.finalState;
+                for (Map.Entry<Instant, CandlestickDto> entry : confirmedCandles) {
+                    Instant candleBucket = entry.getKey();
+                    CandlestickDto candleDto = entry.getValue();
 
-                // Заполняем buffer пересчитанными точками
-                for (RsiPoint point : result.points) {
-                    buffer.putItem(point.bucket(), point);
+                    // Создаем начальный контекст для пайплайна
+                    RsiPipelineContext context = new RsiPipelineContext(
+                            rsiState,
+                            null,
+                            candleBucket,
+                            candleDto
+                    );
+
+                    // Прогоняем контекст через все метрики (пайплайн)
+                    for (Stage<RsiPipelineContext> metric : this.metrics) {
+                        context = metric.process(context);
+                    }
+
+                    // Сохраняем обновленное состояние из обогащенного контекста
+                    rsiState = context.state();
+
+                    // Сохраняем точку в буфер, если она присутствует
+                    if (context.point() != null) {
+                        rsiTimeSeriesBuffer.putItem(context.point().bucket(), context.point());
+                        processedPoints++;
+                    }
                 }
 
-                log().infof("📥 [%s] RSI индикатор полностью пересчитан из истории свечей. " +
+                log().debugf("📥 [%s] RSI индикатор пересчитан из истории свечей. " +
                                 "Восстановлено точек: %d, финальное состояние: %s",
-                        getName(), result.points.size(), rsiState);
+                        getName(), processedPoints, rsiState);
+                lastPoint = rsiTimeSeriesBuffer.getLastItem();
+                initSaveBuffer();
             } else {
                 log().warnf("📥 [%s] Буфер свечей не содержит подтвержденных данных", getName());
             }
         }
-    }
-
-    private void recalculateMetrics(){
-        metrics.forEach(metric -> metric.recalculateMetric(buffer));
     }
 }
